# tfb_public

./: README.md  pyproject.toml
notebooks/: FFT_backprop_2D.ipynb  FFT_backprop_3D.ipynb  fourier_encoding.ipynb  fourier_encoding_3D.ipynb  fourier_encoding_3D_scaling_experiments.ipynb  porous_media.ipynb  tensorfunbound  tests_interpolation.ipynb  tests_interpolation_of_eikonal.ipynb
tensorfunbound/: __init__.py  aux.py  dataloaders.py  double.py  eikonal.py  main.py  neural.py  optim.py  tucker.py  vis.py  voxel.py
tensorfunbound/obsolete/: fixed_cross.py  fixed_tools.py
