[tool.poetry]
name = "tensorfunbound"
version = "0.0.1"
description = "Research project on TT function approximations with boundaries"
authors = ["Alexey Boyko <boyko.phystech@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
tntorch = {git = "https://github.com/rballester/tntorch.git"}
torch = "^1.7.0"
numpy = "^1.19.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
